# functasticpy

./: .gitignore  Makefile  README.md  main.py  mypy.ini  pyproject.toml
functasticpy/: all.py  all.pyi  all_pass.py  all_pass.pyi  any.py  any.pyi  any_pass.py  any_pass.pyi  append.py  assert_type.py  assert_type.pyi  concat.py  concat.pyi  count_by.py  count_by.pyi  curry.py  difference.py  difference.pyi  difference_with.py  pipe.py  pipe.pyi  prop.py  prop.pyi  utils.py
tests/: test_all.py  test_all_pass.py  test_any.py  test_any_pass.py  test_append.py  test_assert_type.py  test_concat.py  test_count_by.py  test_curry.py  test_difference.py  test_pipe.py  test_prop.py
